Added mem limits