@@ -1,2 +1,2 @@
 #!/bin/bash
-exec java -Djava.security.egd=file:/dev/./urandom -jar /gateway-server.jar
+exec java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom -jar /gateway-server.jar
